// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleView component should render 1`] = `
<DocumentFragment>
  <span>
    blah
  </span>
</DocumentFragment>
`;

exports[`SimpleView component should render with link 1`] = `
<DocumentFragment>
  <a
    href="/linkto"
  >
    blah
  </a>
</DocumentFragment>
`;
